fixed scroll on collapse description, hid ClosestTap component, moved refs out of state

--- a/src/components/SelectedTap.css
+++ b/src/components/SelectedTap.css
@@ -145,7 +145,7 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     padding: 5px;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 /* test */
 /* #tap-content-expanded{
